[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/parts/PartClassEditor.gd" type="Script" id=2]
[ext_resource path="res://ui/components/ComponentAttributePicker.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Editor" type="PanelContainer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.0
margin_top = -191.0
margin_right = 325.0
margin_bottom = 191.0
rect_min_size = Vector2( 580, 350 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 647.0
margin_bottom = 375.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
margin_right = 640.0
margin_bottom = 24.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer3"]
margin_left = 5.0
margin_top = 5.0
margin_right = 635.0
margin_bottom = 19.0
text = "Editor de clase:"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 640.0
margin_bottom = 54.0
size_flags_vertical = 7

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 640.0
margin_bottom = 304.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 635.0
margin_bottom = 241.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Box1" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 630.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/Box1"]
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 0
size_flags_vertical = 7
text = "Nombre:"
align = 2
valign = 1

[node name="InputName" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/Box1"]
margin_left = 130.0
margin_right = 630.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 630.0
margin_bottom = 134.0
custom_constants/separation = 10

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/Box2"]
margin_right = 120.0
margin_bottom = 100.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Descripcion:"
align = 2
valign = 1

[node name="InputDescription" type="TextEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/Box2"]
margin_left = 130.0
margin_right = 630.0
margin_bottom = 100.0
rect_min_size = Vector2( 500, 100 )
size_flags_horizontal = 11
smooth_scrolling = true

[node name="Box3" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 630.0
margin_bottom = 168.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/Box3"]
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 0
size_flags_vertical = 7
text = "Atributo principal:"
align = 2
valign = 1

[node name="AttributePicker" parent="VBoxContainer/MarginContainer/VBoxContainer/Box3" instance=ExtResource( 3 )]
margin_left = 130.0
margin_right = 250.0
margin_bottom = 24.0

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/MarginContainer/VBoxContainer/Box3"]
margin_left = 260.0
margin_right = 416.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/Box3"]
margin_left = 426.0
margin_right = 546.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 0
size_flags_vertical = 7
text = "Bonus atributo:"
align = 2
valign = 1

[node name="InputBonusAttribute" type="SpinBox" parent="VBoxContainer/MarginContainer/VBoxContainer/Box3"]
margin_left = 556.0
margin_right = 630.0
margin_bottom = 24.0
max_value = 5.0

[node name="Box4" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 630.0
margin_bottom = 202.0
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/Box4"]
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 0
size_flags_vertical = 7
text = "Proficiencia base:"
align = 2
valign = 1

[node name="InputProf" type="SpinBox" parent="VBoxContainer/MarginContainer/VBoxContainer/Box4"]
margin_left = 124.0
margin_right = 268.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_value = 10.0

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/MarginContainer/VBoxContainer/Box4"]
margin_left = 272.0
margin_right = 417.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/Box4"]
margin_left = 421.0
margin_right = 552.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 0
size_flags_vertical = 7
text = "Dado de resistencia:"
align = 2
valign = 1

[node name="InputDice" type="SpinBox" parent="VBoxContainer/MarginContainer/VBoxContainer/Box4"]
margin_left = 556.0
margin_right = 630.0
margin_bottom = 24.0
min_value = 2.0
value = 6.0
prefix = "1d"

[node name="Box6" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 212.0
margin_right = 630.0
margin_bottom = 236.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/Box6"]
margin_right = 148.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 0
size_flags_vertical = 7
text = "Resistencia fisica base:"
align = 2
valign = 1

[node name="InputPRes" type="SpinBox" parent="VBoxContainer/MarginContainer/VBoxContainer/Box6"]
margin_left = 152.0
margin_right = 226.0
margin_bottom = 24.0
max_value = 20.0

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/MarginContainer/VBoxContainer/Box6"]
margin_left = 230.0
margin_right = 392.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/Box6"]
margin_left = 396.0
margin_right = 552.0
margin_bottom = 24.0
size_flags_horizontal = 0
size_flags_vertical = 7
text = "Resistencia magica base"
align = 2
valign = 1

[node name="InputMRes" type="SpinBox" parent="VBoxContainer/MarginContainer/VBoxContainer/Box6"]
margin_left = 556.0
margin_right = 630.0
margin_bottom = 24.0
max_value = 20.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 308.0
margin_right = 640.0
margin_bottom = 334.0
size_flags_vertical = 7

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 338.0
margin_right = 640.0
margin_bottom = 368.0
size_flags_vertical = 10
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
margin_left = 5.0
margin_top = 5.0
margin_right = 635.0
margin_bottom = 25.0

[node name="ButtonSave" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 56.0
margin_right = 256.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
size_flags_vertical = 5
text = "Guardar"

[node name="ButtonCancel" type="Button" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 373.0
margin_right = 573.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
size_flags_vertical = 5
text = "Cancelar"

[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/ButtonSave" to="." method="_on_ButtonSave_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/HBoxContainer/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
